--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         {setor: "JUAZEIRO", representantes: ["GERVANDIO - JOICE", "PAULO - HUDSON", "TAINÁ - CLAUDEMIR", "PRISCILA - ITALO", "THAMIRES - YAGO", "LICIA - RAVENA", "GRUECY"]},
         {setor: "IGUATU", representantes: ["NATÁLIA", "PAULO DECKSON", "FELIPE", "JOÃO", "RAYAN", "NARA", "MURILO"]},
         {setor: "PARANGABA", representantes: ["MASSÍLIA", "NATÁLIA", "MICHELLY", "LUANA", "MARLY", "MARCOS", "GABRIEL"]},
-        {setor: "MARACANAU", representantes: ["RENATA", "VINICIUS", "ELIONARDO", "BARBOSA", "FERNANDO XUXA", "LOIOLA", "NONATO"]},
+        {setor: "MARACANAU", representantes: ["RENATA", "VINICIUS", "ELIONARDO", "BARBOSA", "FERNANDO", "LOIOLA", "NONATO"]},
         {setor: "BEZERRA", representantes: ["DÉBORA QUEIROZ", "MARINA ARRAES", "SAMANTHA", "CARINE BORGES", "FERNANDA", "BRITO", "ALEXANDRINO"]},
         {setor: "CAUCAIA", representantes: ["DARLENE", "VAGO", "VAGO", "THIAGO BELCHIOR", "VAGO", "MÁRCIO ", "ALEXANDRINO"]}
     ];
@@ -252,4 +252,5 @@
 </script>
 </body>
 </html>
+
 Desenvolvido por Bruno Nogueira 
