--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         {setor: "ALDEOTA GÊNESIS", representantes: ["KARINE ROLENBERG", "PATRIZIA", "JULIAN", "ISADORA", "MATEUS PITAYA", "PAULO JAMES", "GIRLIANE"]},
         {setor: "ALDEOTA SÃO MATEUS", representantes: ["MILTON JR", "NOGUEIRA", "MARCELA", "ANDREA", "JÉSSICA DIAS", "PAULO VICTOR", "MARIA CLARA"]},
         {setor: "CIDADE DOS FUNCIONÁRIOS", representantes: ["RAQUEL", "DÉBORA MARTINS", "BRUNO", "PAULO GUEDES", "CAVALCANTE", "LUCAS", "KARINA"]},
-        {setor: "JUAZEIRO", representantes: ["GERVANDIO - JOICE", "PAULO - HUDSON", "TAINÁ - CLAUDEMIR", "PRISCILA - ITALO", "THAMIRES - YAGO", "LICIA - RAVENA", "GRUECY"]},
+        {setor: "JUAZEIRO", representantes: ["GERVANDIO - JOICE", "PAULO - HUDSON", "TAINÁ - CLAUDEMIR", "PRISCILA - ITALO", "THAMIRES - YAGO", "LICIA - RAVENA", "GREUCY"]},
         {setor: "IGUATU", representantes: ["NATÁLIA", "PAULO DECKSON", "FELIPE", "JOÃO", "RAYAN", "NARA", "MURILO"]},
         {setor: "PARANGABA", representantes: ["MASSÍLIA", "NATÁLIA", "MICHELLY", "LUANA", "MARLY", "MARCOS", "GABRIEL"]},
         {setor: "MARACANAU", representantes: ["RENATA", "VINICIUS", "ELIONARDO", "BARBOSA", "FERNANDO", "LOIOLA", "NONATO"]},
@@ -254,3 +254,4 @@
 </html>
 
 Desenvolvido por Bruno Nogueira 
+
