--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
     const bancoDados = [
         {setor: "SETOR SOBRAL", representantes: ["THIAGO - AMSTERDAM", "PENÉLOPE - ALEX", "YGOR - MARCOS", "MARCIO - ANTÔNIO", "IZAC - LUENE", "FELIPE - JUNIN", "MAYCON"]},
-        {setor: "13 DE MAIO - CENTRO", representantes: ["DÉBORA BEZERRA", "MARINA BRAIDE", "VAGO", "ÁTILA", "DANIELLE", "LARISSA", "LOUISE - KASSIO"]},
+        {setor: "13 DE MAIO - CENTRO", representantes: ["DÉBORA BEZERRA", "MARINA BRAIDE", "CAMILA", "ÁTILA", "DANIELLE", "LARISSA", "LOUISE - KASSIO"]},
         {setor: "ALDEOTA GÊNESIS", representantes: ["KARINE ROLENBERG", "PATRIZIA", "JULIAN", "ISADORA", "MATEUS PITAYA", "PAULO JAMES", "GIRLIANE"]},
         {setor: "ALDEOTA SÃO MATEUS", representantes: ["MILTON JR", "NOGUEIRA", "MARCELA", "ANDREA", "JÉSSICA DIAS", "PAULO VICTOR", "MARIA CLARA"]},
         {setor: "CIDADE DOS FUNCIONÁRIOS", representantes: ["RAQUEL", "DÉBORA MARTINS", "BRUNO", "PAULO GUEDES", "CAVALCANTE", "LUCAS", "KARINA"]},
@@ -229,7 +229,7 @@
         {setor: "PARANGABA", representantes: ["MASSÍLIA", "NATÁLIA", "MICHELLY", "LUANA", "MARLY", "MARCOS", "GABRIEL"]},
         {setor: "MARACANAU", representantes: ["RENATA", "VINICIUS", "ELIONARDO", "BARBOSA", "FERNANDO", "LOIOLA", "NONATO"]},
         {setor: "BEZERRA", representantes: ["DÉBORA QUEIROZ", "MARINA ARRAES", "SAMANTHA", "CARINE BORGES", "FERNANDA", "BRITO", "ALEXANDRINO"]},
-        {setor: "CAUCAIA", representantes: ["DARLENE", "VAGO", "VAGO", "THIAGO BELCHIOR", "VAGO", "MÁRCIO ", "ALEXANDRINO"]}
+        {setor: "CAUCAIA", representantes: ["DARLENE", "VAGO", "LUCAS", "THIAGO BELCHIOR", "VAGO", "MÁRCIO ", "ALEXANDRINO"]}
     ];
 
     const linhasMap = ["1", "2", "3", "4", "5", "6", "BIO"];
@@ -351,3 +351,4 @@
 </body>
 </html>
 Criado por Bruno N. Medeiros
+
