--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         {setor: "PARANGABA", representantes: ["MASSÍLIA", "NATÁLIA", "MICHELLY", "LUANA", "MARLY", "MARCOS", "GABRIEL"]},
         {setor: "MARACANAU", representantes: ["RENATA", "VINICIUS", "ELIONARDO", "BARBOSA", "FERNANDO", "LOIOLA", "NONATO"]},
         {setor: "BEZERRA", representantes: ["DÉBORA QUEIROZ", "MARINA ARRAES", "SAMANTHA", "CARINE BORGES", "FERNANDA", "BRITO", "ALEXANDRINO"]},
-        {setor: "CAUCAIA", representantes: ["DARLENE", "VAGO", "LUCAS", "THIAGO BELCHIOR", "VAGO", "MÁRCIO ", "ALEXANDRINO"]}
+        {setor: "CAUCAIA", representantes: ["DARLENE", "GUSTAVO", "LUCAS", "THIAGO BELCHIOR", "VAGO", "MÁRCIO ", "ALEXANDRINO"]}
     ];
 
     const linhasMap = ["1", "2", "3", "4", "5", "6", "BIO"];
@@ -351,4 +351,5 @@
 </body>
 </html>
 Criado por Bruno N. Medeiros
+
 
